# quant_framework

./: .dockerignore  .env.staging.example  .gitignore  BRONZE_STORAGE_IMPLEMENTATION.md  Makefile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  repomix-output.xml  to_be_folderstructure.txt
config/: assets.yaml  coinalyze.yaml  database.yaml  global.yaml  jmx-exporter-config.yaml  redis.yaml  settings.py
config/assets/: crypto_universe.yaml
config/bronze/: sources.yaml
config/dags/: dag_configs.yaml
config/data_sources/ccxt/: base.yaml
config/env/: dev.yaml  prod.yaml  staging.yaml
config/infra/: database.yaml  kafka.yaml
config/market_types/: inverse_perpetual.yaml  linear_perpetual.yaml  spot.yaml
config/services/: incremental_fetcher.yaml  oi_incremental_5m.yaml  oi_incremental_5m_inverse.yaml  oi_incremental_5m_linear.yaml
db/init/: 00-init.databases.sql  10-create-quant-db.sh
db/init/schemas/: 03-backfill-system.sql
docker/: Dockerfile  Dockerfile.dev  README.md
docker/storage/: init_bronze.sh
docs/: DOCKER_SETUP.md  ENVIRONMENTS.md
infra/airflow/: Dockerfile.dev  Dockerfile.prod
infra/airflow/dags/: ccxt_oi_1h_inverse_incremental.py  ccxt_oi_1h_linear_incremental.py  coinalyze_minimal.py  coinalyze_oi_backfill.py  historical_data_initialization.py  oi_cross_source_validator.py
infra/airflow/scripts/: entrypoint.sh  init_dags.sh
infra/monitoring/prometheus/: prometheus.yaml
scripts/: backfill_inverse_contracts.sh  bronze_purge.py  check-code-sync.sh  clear_market_data.sh  dev-down.sh  dev-logs.sh  dev-rebuild.sh  dev-up.sh  prod-down.sh  prod-up.sh
scripts/infra/: validate_env.py
scripts/ingestion/: get_onchain.py  get_onchain_v2.py  get_onchain_v2_demo.py
scripts/utils/: validate_env.py
src/: repomix-output.xml
src/mnemo_quant_api/: health.py  main.py
src/quant_framework/: __init__.py  repomix-output.xml
src/quant_framework/common/: README.md  __init__.py
src/quant_framework/config/: __init__.py  state.py
src/quant_framework/examples/: __init__.py  ccxt_binance_demo.py  ccxt_bybit_demo.py  ccxt_gateio_demo.py  ccxt_huobi_demo.py
src/quant_framework/features/: __init__.py
src/quant_framework/ingestion/: __init__.py  dependency_container.py  service.py
src/quant_framework/legacy/: asset_coverage.py  ccxt_exchanges.py  coinalyze.py  database.py  enums.py  orchestrator.py
src/quant_framework/orchestration/: README.md  __init__.py  ports.py
src/quant_framework/shared/: __init__.py
src/quant_framework/storage/: __init__.py
src/quant_framework/transformation/: __init__.py  (+3 more)
tests/: test_feature_engineering.py
tests/fixtures/: __init__.py
tests/test_bronze/: test_bronze_storage.py
tests/test_observability/: test_logger_factory.py  test_setup_logging.py  test_smoke_log.py
utils/: timezone.py
(+153 files in other folders)
