[project]
name = "mnemo-quant"
version = "0.1.0"
description = "Hedge fund-grade crypto trading platform"
authors = [{name = "Lucas Minchillo", email = "lucasmminchillo@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "sqlalchemy>=1.4.24,<2.0.0",
    "psycopg2-binary==2.9.9",
    "redis==5.0.8",
    "pydantic_settings",
    "apache-airflow-providers-postgres==5.10.0",
    "prometheus-client==0.20.0",
    "pydantic==2.9.2",
    "ccxt==4.4.13",
    "requests==2.32.3",
    "aiohttp==3.10.10",
    "jinja2",
    "apscheduler==3.10.4",
    "pyyaml==6.0.2",
    "cramjam",
    "xxhash",
    "websocket-client==1.8.0",
    "alembic==1.13.2",
    "lz4",
    "asyncpg==0.29.0",
    "pandas>=2.3.3",
    "websockets>=15.0.1",
    "pyarrow>=22.0.0",
    "aioboto3>=15.5.0",
    "apache-airflow==2.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-timeout==2.3.1",
    "ruff==0.6.9",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mnemo_quant", "mnemo_quant_api", "quant_framework"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "real_data: tests that use real exchange APIs",
    "slow: tests that are slow",
    "integration: integration tests",
    "unit: unit tests"
]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
